--- a/cEM_Bayes.Rmd
+++ b/cEM_Bayes.Rmd
@@ -13,44 +13,43 @@ output:
 #Load required R packages.
 library(MASS)
 library(tidyverse)
-#library(lme4)
-#library(nlme)
+library(nlme)
 library(knitr)
 library(brms)
+library(bayesplot)
+library(ggplot2)
+
 source("R/helper_functions.R")
 ```
 
 
 
-
-
-# Sample data, cSEMs per sumscore, via modeling residual variances as a function of the sumscores, using Bayesian 
+# Sample data, Bayesian cSEMs per sumscore, via modeling residual variances as a function of the sumscores
 
 We simulate data according to a 2PLM model for nJ = 10 items, of size N = 1000. 
 The item parameters are taken fixed across replicates, and the ability parameters vary across replicates.
 
 
-We model sample data (N=1000) with a random effect model, allowing for heteroscedasticity, depending on the sum score (Xplus).
+We model sample data (N=1000), 10 items following a 2PL model, 
+with a random effect model, allowing for heteroscedasticity, depending on the sum score (Xplus).
 The residual variance depending on the sum score is modeled with splines. The model is estimated in a Bayesian way.
 
-```{r simulate-sample_cSEM_1model, echo = FALSE, warning = FALSE, message = FALSE, fig.show='hold'}
-nJ <- 10 #items
-
-#sam_estcSEMs_1M <- data.frame(matrix(nrow = 3, ncol = nJ+1))
-#fit <- data.frame(matrix(nrow = 3, ncol = 2))
-
-X <- simulateGRM(nN = 1000, nJ = nJ)$isc
+```{r simulate-sample_BaycSEM, echo = FALSE, warning = FALSE, message = FALSE, fig.show='hold'}
+nJ <-10
+X <- simulateGRM(nN = 1000, nJ = 10)$isc
 Xwide <- as.data.frame(X)
 colnames(Xwide) <- paste0("I", 1:ncol(X))
 Xwide$Person <- rownames(X) %||% 1:nrow(X)
 Xsum   <- rowSums(Xwide[, 1:nJ])
 Xc     <- Xsum - 5
 Xplus  <- Xsum + 0.0001
+Xplus2 <- Xc^2
 
 X_eval <- seq(0, 10, by = 1)
 Xplus_eval  <- X_eval + 0.0001
+Xplus2_eval <- (X_eval - 5)^2
 
-Xwide  <- Xwide %>% mutate(Xplus = Xplus)
+Xwide  <- Xwide %>% mutate(Xplus = Xplus, Xplus2)
 
 Xlong <- pivot_longer(
 Xwide,
@@ -65,8 +64,89 @@ brm_model <- brm(
   family = gaussian()
 )
 
+# Samenvatting van posterior
+print(summary(brm_model))
 
+# Rhat moet ~1 zijn voor alle parameters
+# Neff = effectieve sample size
+
+#library(bayesplot)
+print(pp_check(brm_model))  # standaard histogram / density overlay
+#print(pp_check(brm_model, type = "bars"))  # discrete outcomes
+
+#library(ggplot2)
+res <- residuals(brm_model, type = "pearson")[, "Estimate"]
+fitted_vals <- fitted(brm_model)[, "Estimate"]  # posterior mean
+df <- data.frame(fitted = fitted_vals, residuals = res, Xplus = Xlong$Xplus)
+
+print(ggplot(df, aes(x = fitted, y = residuals, color = Xplus)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  labs(title = "Residuals vs Fitted"))
+
+X_grid <- data.frame(
+  Xplus = seq(min(Xlong$Xplus), max(Xlong$Xplus), length.out = 100)
+)
+
+##Plot
+X_grid <- data.frame(
+  Xplus = seq(min(Xlong$Xplus), max(Xlong$Xplus), length.out = 100),
+  Item  = Xlong$Item[1]   # any existing level is fine
+)
+
+sigma_grid <- posterior_epred(
+  brm_model,
+  dpar = "sigma",
+  newdata = X_grid,
+  re_formula = NA
+)
+
+
+sigma_mean  <- apply(sigma_grid, 2, mean)
+sigma_lower <- apply(sigma_grid, 2, quantile, 0.025)
+sigma_upper <- apply(sigma_grid, 2, quantile, 0.975)
+
+
+cSEM_mean <- sqrt(sigma_mean^2 * nJ)
+cSEM_lower <- sqrt(sigma_lower^2 * nJ)
+cSEM_upper <- sqrt(sigma_upper^2 * nJ)
+
+print(plot(
+  X_grid$Xplus, cSEM_mean,
+  type = "l",
+  ylim = range(c(cSEM_lower, cSEM_upper)),
+  xlab = "Xplus",
+  ylab = expression(cSEM),
+  main = expression("cSEM as a smooth function of Xplus")
+))
+print(lines(X_grid$Xplus, cSEM_lower, lty = 2))
+print(lines(X_grid$Xplus, cSEM_upper, lty = 2))
 ```
 
+# Sample data, Frequentist cSEMs per sumscore, via modeling residual variances as a function of the sumscores
+
+For comparison, we also model cSEMs per sumscore using a frequentist random effect model, with heteroscedasticity. The latter is done via an exponential term with linear plus quadratic effects of Xplus.
 
 
+```{r simulate-sample_FreqcSEM, echo = FALSE, warning = FALSE, message = FALSE, fig.show='hold'}
+
+
+model <-  try(lme(fixed = Score ~ Item, random = ~1 | Person, weights = varComb(
+    varExp(form = ~ Xplus),
+    varExp(form = ~ Xplus2)
+  ), data = Xlong)
+    , silent = TRUE)
+ if (inherits(model, "try-error")) {
+    sam_estcSEMs  <- matrix(nrow = 1, ncol = nJ+1, NA)
+  } else {
+print(plot_resid_var(model, Xlong$Xplus, title = "linear and quadratic effect for varEXp"))
+sam_estcSEMs <- data.frame(X = Xplus_eval, Y = eval_resid_var(model, Xplus_eval, Xplus2_eval))
+rownames(sam_estcSEMs) <- paste0("sum", 0:nJ) 
+#colnames(sam_estcSEMs) <- c("Xplus_eval" ,"freqcSEM_lme_lin+qua" )
+print(kable(sam_estcSEMs, caption = "Estimated freq. cSEMs per sumscore",digits = 3))
+
+
+print( plot(sam_estcSEMs$X, sam_estcSEMs$Y, 
+            type="b", xlab = "Xplus", ylab = "cSEM", main = "frequentist cSEM"))
+}
+```
